--- a/README.org
+++ b/README.org
@@ -166,6 +166,8 @@ of supported languages is not very impressive, but /in theory/ it should be as
 simple as running a script to preprocess a grammar and adding a configuration
 file for the language.
 
+See [[https://github.com/ethan-leba/tree-edit/blob/docs/doc/using-tree-edit.org#adding-new-languages-to-tree-edit][here]] to learn the process for adding a new language.
+
 * Customization
 
 Currently adding customization ontop of the preset language files requires a
