--- a/README.org
+++ b/README.org
@@ -84,8 +84,12 @@ The navigation primitives follow the tree structure of the language.
 | Previous             | @@html:<kbd>@@k@@html:</kbd>@@ | Move cursor to the previous sibling.                                                |
 | Inwards              | @@html:<kbd>@@f@@html:</kbd>@@ | Move cursor to the first child.                                                     |
 | Outwards             | @@html:<kbd>@@h@@html:</kbd>@@ | Move cursor to the parent.                                                          |
-| Jump to              | @@html:<kbd>@@s@@html:</kbd>@@ | Jump to a node of /node-type/ for a node inside the current.                        |
+| Jump to              | @@html:<kbd>@@s@@html:</kbd>@@ | Avy jump to a node of /node-type/ for a node inside the current.                    |
 | Outwards Significant | @@html:<kbd>@@A@@html:</kbd>@@ | Move outwards until a significant node (e.g. function or class declaration) is hit. |
+| Goto Placeholder     | @@html:<kbd>@@n@@html:</kbd>@@ | Jump to the first placeholder node within the current.                              |
+
+The definition of a placeholder node is configurable, but generally it's the
+=TREE= identifiers as seen in the GIF demo.
 
 ** Editing operations
 The most important feature of tree-edit: editing the syntax tree.
@@ -114,6 +118,8 @@ generated.
 | Slurp        | @@html:<kbd>@@>@@html:</kbd>@@ | Grow the current node to contain the nearest right-most element.                                                       |
 | Barf         | @@html:<kbd>@@<@@html:</kbd>@@ | Shrink the current node to place it's left-most element into the parent node.                                          |
 | Copy         | @@html:<kbd>@@y@@html:</kbd>@@ | Copy the text of the current node.                                                                                     |
+| Undo         | @@html:<kbd>@@u@@html:</kbd>@@ | Undo the last operation.                                                                                               |
+| Preview      | @@html:<kbd>@@?@@html:</kbd>@@ | Preview the possible variations of the current node.                                                                   |
 
 ** Pasting
 Along with the standard node-types of the given language, tree-edit has a
